<resources>
    <string name="app_name">Elegant Shoes</string>

    <!-- login layout -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_image">login image</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- welcome screen layout -->
    <string name="welcoming_text">We are welcoming you to our humble
        store for elegant shoes, where we hope you will find the right
        shoes for you
    </string>
    <string name="vision">our goal is to provide an elegant pair
        of shoes for every customer
    </string>
    <string name="next">Next</string>
    <!-- shoes detail layout -->
    <string name="shoes_size">shoes size:</string>
    <string name="shoes_description">Shoes Description:</string>
    <string name="shoes_company">Shoes company:</string>
    <string name="shoes_name">Shoes Name:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="instruction_first">So by pressing the upper corner button you can add a new shoe</string>
    <string name="instruction_second">in detail add shoe item when you click save it will save it or click cancel to ignore</string>
    <string name="login_screen">Login Screen</string>

</resources>