<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_marginStart="@dimen/margin_all_16d"
            android:layout_marginTop="@dimen/margin_all_16d"
            android:layout_marginEnd="@dimen/margin_all_16d"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/login_image"
            app:layout_constraintBottom_toTopOf="@+id/editText_login_EmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <EditText
            android:id="@+id/editText_login_EmailAddress"
            style="@style/login_label_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editText_login_Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_login_Password"
            style="@style/login_label_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_login_labelsToButtons"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button_login_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_16d"
            android:text="@string/login"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_login_signUp"
            app:layout_constraintEnd_toStartOf="@+id/button_login_signUp"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_login_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_login_labelsToButtons"
            android:layout_marginEnd="@dimen/margin_all_16d"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_login_login"
            app:layout_constraintTop_toBottomOf="@+id/editText_login_Password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>